# thanos-rust

./: Cargo.toml  LICENSE  README.md  build.rs
proto/: labelpbtypes.proto  prompbtypes.proto  remote.proto  rpc.proto  types.proto
src/: main.rs  mod.rs  prometheus_client.rs  prometheus_copy.rs  thanos.rs
