[package]
name = "thanos-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.1"
tokio = { version = "1.18.0", features = ["macros", "rt-multi-thread"] }
prost = "0.10.1"
prost-types = "0.10.1"
futures-core = "0.3"
hyper = "0.14"
snap = "1"
bytes = "1"
unsigned-varint = { version = "0.7.1", features = ["std"] }
reqwest = { version = "0.11.11", features = ["stream"] }
futures-util = "0.3.24"
tokio-stream = "0.1.10"

[build-dependencies]
tonic-build = "0.7.2"
